# hexsum

./: .gitignore  Pipfile  README.md  changelog.md  pyproject.toml
docs/: CommandLogic.md  hexsum.1.md
src/hexsum/: __main__.py  _file_safely.py  _printables.py  _version.py
